apps/base/selfhosted/librarian/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lbry-ingress
  namespace: selfhosted
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: lbry.thekitty.zone
    external-dns.alpha.kubernetes.io/ttl: "3600" #optional
spec:
  rules:
    - host: lbry.thekitty.zone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lbry
                port:
                  number: 3000
  tls:
    - secretName: lbry-tls
      hosts:
        - lbry.thekitty.zone
